err/cloudstack-marvin.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/.libs_cffi_backend'...
Listing './lib/python3.5/site-packages/PyNaCl-1.2.1.dist-info'...
Listing './lib/python3.5/site-packages/asn1crypto'...
Listing './lib/python3.5/site-packages/asn1crypto/_perf'...
Listing './lib/python3.5/site-packages/asn1crypto-0.24.0.dist-info'...
Listing './lib/python3.5/site-packages/bcrypt'...
Listing './lib/python3.5/site-packages/bcrypt-3.1.4.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/cffi'...
Listing './lib/python3.5/site-packages/cffi-1.11.3.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/cloudstack_marvin-4.4.0.egg-info'...
Listing './lib/python3.5/site-packages/cryptography'...
Listing './lib/python3.5/site-packages/cryptography/hazmat'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/asymmetric'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/ciphers'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/kdf'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/twofactor'...
Listing './lib/python3.5/site-packages/cryptography/x509'...
Listing './lib/python3.5/site-packages/cryptography-2.1.4.dist-info'...
Listing './lib/python3.5/site-packages/ddt-1.1.1.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/marvin'...
Compiling './lib/python3.5/site-packages/marvin/asyncJobMgr.py'...
***   File "./lib/python3.5/site-packages/marvin/asyncJobMgr.py", line 65
    except cloudstackException.cloudstackAPIException, e:
                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/marvin/cloudstackAPI'...
Compiling './lib/python3.5/site-packages/marvin/cloudstackConnection.py'...
***   File "./lib/python3.5/site-packages/marvin/cloudstackConnection.py", line 176
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/marvin/codegenerator.py'...
***   File "./lib/python3.5/site-packages/marvin/codegenerator.py", line 444
    print "Failed to create folder %s, due to %s" % (apiModule,
                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/marvin/configGenerator.py'...
***   File "./lib/python3.5/site-packages/marvin/configGenerator.py", line 359
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/marvin/dbConnection.py'...
***   File "./lib/python3.5/site-packages/marvin/dbConnection.py", line 82
    print db.execute("update vm_template set name='fjkd' where id=200")
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/marvin/deployAndRun.py'...
***   File "./lib/python3.5/site-packages/marvin/deployAndRun.py", line 97
    print "\nMarvin Initialization Failed"
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/marvin/integration'...
Listing './lib/python3.5/site-packages/marvin/integration/lib'...
Compiling './lib/python3.5/site-packages/marvin/integration/lib/utils.py'...
***   File "./lib/python3.5/site-packages/marvin/integration/lib/utils.py", line 139
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/marvin/jsonHelper.py'...
***   File "./lib/python3.5/site-packages/marvin/jsonHelper.py", line 181
    print nsp[0].id
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/marvin/marvinInit.py'...
***   File "./lib/python3.5/site-packages/marvin/marvinInit.py", line 65
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/marvin/marvinLog.py'...
***   File "./lib/python3.5/site-packages/marvin/marvinLog.py", line 70
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/marvin/marvinPlugin.py'...
***   File "./lib/python3.5/site-packages/marvin/marvinPlugin.py", line 193
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/marvin/sandbox'...
Listing './lib/python3.5/site-packages/marvin/sandbox/advanced'...
Listing './lib/python3.5/site-packages/marvin/sandbox/advancedsg'...
Listing './lib/python3.5/site-packages/marvin/sandbox/basic'...
Compiling './lib/python3.5/site-packages/marvin/sshClient.py'...
***   File "./lib/python3.5/site-packages/marvin/sshClient.py", line 171
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mysql'...
Listing './lib/python3.5/site-packages/mysql/connector'...
Listing './lib/python3.5/site-packages/mysql/connector/django'...
Listing './lib/python3.5/site-packages/mysql/connector/fabric'...
Listing './lib/python3.5/site-packages/mysql/connector/locales'...
Listing './lib/python3.5/site-packages/mysql/connector/locales/eng'...
Listing './lib/python3.5/site-packages/mysql_connector_python-8.0.5.dist-info'...
Listing './lib/python3.5/site-packages/mysqlx'...
Listing './lib/python3.5/site-packages/mysqlx/locales'...
Listing './lib/python3.5/site-packages/mysqlx/locales/eng'...
Listing './lib/python3.5/site-packages/mysqlx/protobuf'...
Listing './lib/python3.5/site-packages/nacl'...
Listing './lib/python3.5/site-packages/nacl/bindings'...
Listing './lib/python3.5/site-packages/nacl/pwhash'...
Listing './lib/python3.5/site-packages/nose'...
Listing './lib/python3.5/site-packages/nose/ext'...
Listing './lib/python3.5/site-packages/nose/plugins'...
Listing './lib/python3.5/site-packages/nose/sphinx'...
Listing './lib/python3.5/site-packages/nose/tools'...
Listing './lib/python3.5/site-packages/nose-1.3.7.dist-info'...
Listing './lib/python3.5/site-packages/paramiko'...
Listing './lib/python3.5/site-packages/paramiko-2.4.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyasn1'...
Listing './lib/python3.5/site-packages/pyasn1/codec'...
Listing './lib/python3.5/site-packages/pyasn1/codec/ber'...
Listing './lib/python3.5/site-packages/pyasn1/codec/cer'...
Listing './lib/python3.5/site-packages/pyasn1/codec/der'...
Listing './lib/python3.5/site-packages/pyasn1/codec/native'...
Listing './lib/python3.5/site-packages/pyasn1/compat'...
Listing './lib/python3.5/site-packages/pyasn1/type'...
Listing './lib/python3.5/site-packages/pyasn1-0.4.2.dist-info'...
Listing './lib/python3.5/site-packages/pycparser'...
Listing './lib/python3.5/site-packages/pycparser/ply'...
Listing './lib/python3.5/site-packages/pycparser-2.18.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
